# Absolute-Cinema-Duel

./: .env_template  .gitignore  README.md  alembic.ini  pyproject.toml
backend/: actors.py  database.py  main.py  models.py  security.py  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 46ed37c0b404_create_tables_for_users_auth_sessions_.py  77ec4585da6f_merge_alembic_heads.py  8d91f64c2a11_add_short_description_to_movies.py  9f4c2d1b7eaa_make_user_and_game_timestamps_timezone_aware.py  (+8 more)
backend/crud/: game_session.py  movie.py  session_movie.py  session_participant.py  user.py
backend/repositories/: movie_repository.py
backend/routers/: auth.py  game_session.py  movie.py  user.py  ws.py
backend/schemas/: __init__.py  game_flappy.py  game_flappy_protocol.md  game_session.py  movie.py  user.py
backend/services/: __init__.py  avatar_service.py  errors.py  flappy_service.py  game_session_service.py  kinopoisk_client.py  movie_service.py
backend/tournaments/: __init__.py  app.py  bracket.py  models.py  repository.py  room_bus.py  router.py  schemas.py  service.py  settings.py
backend/websocket/: README.md  auth.py  game_flappy.py  manager.py  models.py  protocol.py  room.py  service.py
frontend/: README.md  app.js  flappy.html  index.html  next.config.ts  package-lock.json  package.json  start-dev.sh  styles.css
frontend/src/: middleware.ts
frontend/static/: flappy.html
tests/: test_e2e_http_ws.py  test_flappy_service.py  test_game_session_service.py  test_game_session_start_game.py  test_security.py  test_ws_auth.py  test_ws_service.py
(+42 files in other folders)
