[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "absolute-cinema-duel"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "passlib[bcrypt]>=1.7",
  "bcrypt<5",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "email-validator>=2.0",
  "fastapi>=0.100",
  "uvicorn>=0.23",
  "httpx>=0.27",
  "websockets>=12.0"
]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*", "storage*"]

[dependency-groups]
dev = [
    "hypothesis>=6.152.6",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
